src/test/ui/traits/suggest-deferences/issue-39029.stderr
error[E0277]: the trait bound `NoToSocketAddrs: ToSocketAddrs` is not satisfied
  --> $DIR/issue-39029.rs:16:37
   |
LL |     let _errors = TcpListener::bind(&bad);
   |                   ----------------- ^^^^
   |                   |                 |
   |                   |                 the trait `ToSocketAddrs` is not implemented for `NoToSocketAddrs`
   |                   |                 help: consider adding dereference here: `&*bad`
   |                   required by a bound introduced by this call
   |
   = note: required because of the requirements on the impl of `ToSocketAddrs` for `&NoToSocketAddrs`
note: required by a bound in `TcpListener::bind`
  --> $SRC_DIR/std/src/net/tcp.rs:LL:COL
   |
LL |     pub fn bind<A: ToSocketAddrs>(addr: A) -> io::Result<TcpListener> {
   |                    ^^^^^^^^^^^^^ required by this bound in `TcpListener::bind`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
